--- a/stylesheets/my-website-stylesheet.css
+++ b/stylesheets/my-website-stylesheet.css
@@ -4,14 +4,20 @@ html {
 		background-color: transparent;
 		width: 100%;
 		height: 100%;
-		opacity: .8;
+}
+
+body {
+	height: 100%;
+	padding:0;
+	margin:0;
 }
 
 #network{
-	margin-left:96%;
+	text-align: right;
+	padding:5px;
 }
 
-#social:hover{
+.social:hover{
 	background-color: #700000;
 
 }
@@ -24,8 +30,21 @@ html {
 
 #bottomlink {
 	position:fixed;
-	left:40%;
+	width: 100%;
+	text-align: center;
 	top:92%;
 	font-size:200%;
 	font-family: 'Lobster', cursive;
+}
+
+#wrapper {
+	background: rgba(255,255,255,0.5);
+	height:100%;
+}
+
+#bottomlink a {
+	background-color: rgba(55, 100, 155, 0.33);
+	padding: 15px;
+	border-radius: 5px;
+	color: orange;
 }
