--- a/stylesheets/my-website-stylesheet.css
+++ b/stylesheets/my-website-stylesheet.css
@@ -1,50 +1,61 @@
 html {
-		background: url("../imgs/ggb.jpg") no-repeat center center fixed;
-		background-size: cover;
-		background-color: transparent;
-		width: 100%;
-		height: 100%;
+    background: url("../imgs/ggb.jpg") no-repeat center center fixed;
+        background-size: cover;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+}
+body{
+    background: rgba(255,255,255,0.3);
+    height: 100%;
+}
+/*
+#header {
+    color:white;
+    text-align:center;
+    padding:5px;
+    height: 100px;
+    top: 0px;
+}*/
+#nav {
+    line-height:30px;
+/*    height:300px;
+    width:125px;*/
+    float:left;
+    padding:5px; 
+    top: 25px;
+}
+#nav a{
+    background-color: rgba(55, 100, 155, 0.33);
+    padding: 25px;
+    border-radius: 5px;
+    color: orange;
+    float:left;
+}
+#intro {
+    position: absolute;
+    width:500px;
+    float:left;
+    padding:10px; 
+    bottom: 20px;
+    right: 10px;
+    font-weight: bold;
+}
+#social{
+    position: absolute;
+    line-height: 30px;
+    width: 125px;
+    float:right;
+    text-align: right;
+    top: 25px;
+    right:10px;
 }
 
-body {
-	height: 100%;
-	padding:0;
-	margin:0;
-}
-
-#network{
-	text-align: right;
-	padding:5px;
-}
-
-.social:hover{
-	background-color: #700000;
-
-}
-
-#intro{
-	margin-top:-24em;
-	margin-left:3%;
-	font-family: 'Shadows Into Light', cursive;
-}
-
-#bottomlink {
-	position:fixed;
-	width: 100%;
-	text-align: center;
-	top:92%;
-	font-size:200%;
-	font-family: 'Lobster', cursive;
-}
-
-#wrapper {
-	background: rgba(255,255,255,0.5);
-	height:100%;
-}
-
-#bottomlink a {
-	background-color: rgba(55, 100, 155, 0.33);
-	padding: 15px;
-	border-radius: 5px;
-	color: orange;
+#blogmenu{
+    position: fixed;
+    width: 900px;
+    float: left;
+    text-align: left;
+    top: 100px;
+    left: 25px;
 }
