--- a/stylesheets/my-website-stylesheet.css
+++ b/stylesheets/my-website-stylesheet.css
@@ -19,13 +19,26 @@ body{
 }*/
 #nav {
     line-height:30px;
-/*    height:300px;
-    width:125px;*/
     float:left;
     padding:5px; 
     top: 25px;
 }
 #nav a{
+    background-color: rgba(55, 100, 155, 0.33);
+    padding: 25px;
+    border-radius: 5px;
+    color: orange;
+    float:left;
+}
+#nav-blog {
+    line-height:30px;
+    float:left;
+    height:200px;
+    width:900px;
+    padding:5px; 
+    top: 25px;
+}
+#nav-blog a{
     background-color: rgba(55, 100, 155, 0.33);
     padding: 25px;
     border-radius: 5px;
@@ -40,6 +53,17 @@ body{
     bottom: 20px;
     right: 10px;
     font-weight: bold;
+}
+#blogbox {
+    position: absolute;
+    left: 23%;
+    top: 150px;
+    width: 750px;
+    background-color: white;
+    opacity: 0.50;
+    font: black;
+    font-size: 18pt;
+    margin-bottom: 50px;
 }
 #social{
     position: absolute;
